# errorcodes

./: README.md  pyproject.toml
scripts/: poetry.py
tests/: test_init.py
